integration-tests/src/test-cases/parse-error-inquiry-space/expected
parse error: from "test-cases/parse-error-inquiry-space/input", line 1:
| query $ x
|        ^
|
+-> Syntax error: while parsing parenthetical-expression, unexpected ' ' while expecting '!', '$', '(', '[', 'f', 'l', 'q', or '{'
